# To-Binary

./: Cargo.toml  README.md
examples/: conversion.rs  conversion_examples.rs  usage.rs
src/: lib.rs
tests/: conversion_unit_tests.rs  integration_tests.rs  unit_tests.rs
