[package]
name = "to-binary"
version = "0.1.0"
authors = ["0xSilene <51803887+0xSilene@users.noreply.github.com>"]
edition = "2018"
description = "Converts From Hex, UTF-8, Vector of Bytes, or a Byte Slice to a Binary String"
keywords = ["binary","string","bin","conversion","hex"]
categories = ["cryptography", "science","algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"